refactor: reduce line of codes